21-12-18-2

N/A added to pending upload params

21-12-18

Bug fixes on importing, further improvements to feedback on importing

20-12-18

The system now uses Import Templates. This is a *major* update which accounts for the gap in deployments.

Can execute multi-line 'az_execute' regions

If the az_Execute range is also called 'az_PreExecute' then the execution will happen every time.

Functions inserted - BESTVALUEMATCH, BESTNAMEMATCH, BESTNAMEVALUEMATCH - defined in Reference Manual

Will allow bracketed 'Where' statements to pass to the NameFilterFunctions if they refer to attributes

Allows offset top headings, more specifically when they're shifted right

Composite attribute syntax, various bits of code tidying

27-11-18-2

! Groovy script bug fix


27-11-18

XML named region option to export data from a report to an XML file


26-11-18

See results of importing on the uploads list

Scroll import error/feedback

! Fix groovy to work with the new uploaded file object


21-11-18

Will execute regions 'az_query<regionname>' before populating region

Removed redundant "set up file" functionality

Sorts large sets where 'from' or 'to' is specified

Refactoring parameters passed around while uploading data - intitial effect is improved feedback from importing which will be improved further

! Fixed file handler error that was crashing the server


16-11-18

NPE catch on outside case in query parsing (from/to in a list), optimiseation when resetting large children sets on a name

Fixed bug - confusion between fileName and fileSource when setting up 'DATAIMPORT'


15-11-18

! Import null pointer fix

Added 'linecells' (the number of actual cells on an import line)

Avoids filling in values where the cell count > heading count

Bug fix on report list and support for non admin user menus in the Excel plugin


13-11-18

Shows 500 recently updated files

Fixed bug - SetsImport required FileSource - not fileName

Shows the sheet name when reporting the import
